# PSE_SmartHouse

./: .gitignore  .gitignore~  README.md  get_time.c
interface/: new  (+5 more)
pic_programming/Communication.X/: CMakeLists.txt  create_normal_message.c  main.c  message.c  send_receive_messages.c  send_receive_messages.h
pic_programming/Communication.X/StatemachineCommunication/: Makefile  Makefile~  create_normal_message.c  create_normal_message.h  main.c  primo  send_receive_messages.c  send_receive_messages.h
pic_programming/Communication.X/UnitTest_Tester/: Makefile  testRunner.cpp  tests
pic_programming/Communication.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-variables.mk
pic_programming/Schedules.X/: CMakeLists.txt  desiredValues.c  desiredValues.h  main.c  message.c  message.h  schedules.c
pic_programming/Schedules.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
pic_programming/Statemachines.X/: CMakeLists.txt  main.c  statemachine_airquality_control.c  statemachine_airquality_control.h  statemachine_airtemp_control.c  statemachine_airtemp_control.h  statemachine_light_control.c  statemachine_light_control.h  statemachine_watertemp_control.c  statemachine_watertemp_control.h  statemachines.h  statemachines.h~
pic_programming/Statemachines.X/AirQuality/Statemachine_AirQuality/: Makefile~  example  main.c  statemachine_airquality_control.c  statemachine_airquality_control.h
pic_programming/Statemachines.X/AirQuality/UnitTest_Tester/: testRunner.cpp  tests
pic_programming/Statemachines.X/AirTemperature/Statemachine_AirTemperature/: example  statemachine_airtemp_control.c  statemachine_airtemp_control.h
pic_programming/Statemachines.X/AirTemperature/UnitTest_Tester/: testRunner.cpp  tests
pic_programming/Statemachines.X/LightControl/StatemachineLightControl/: Makefile  statemachine_light_control.c~
pic_programming/Statemachines.X/LightControl/UnitTest_Tester/: Makefile~  testRunner.cpp  tests
pic_programming/Statemachines.X/Statemachine_AirTemperature/Statemachine_AirTemperature/: statemachine_airtemp_control.c  (+1 more)
pic_programming/Statemachines.X/nbproject/: Makefile-genesis.properties  Makefile-variables.mk
(+455 files in other folders)
